[feature] Added ColorProperties, Added colorizing

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ build/differentiator.o
 build/fileHandler.o
 build/logger.o
 build/main.o
+build/colorProperties.o
 target/diffApp.exe
 target/file1.txt
 target/file2.txt
